--- a/AwsDemo.csproj
+++ b/AwsDemo.csproj
@@ -6,5 +6,9 @@
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="5.0.9" />
+  </ItemGroup>
+
 
 </Project>
